--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Hello<h1>
         <h2>This is Pranjal.</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit labore quos doloremque, tenetur dolorem pariatur blanditiis modi laudantium soluta non, sapiente fuga aliquam.</p>
 </body>
 </html>
