This is our first project

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>Hello<h1>
         <h2>This is Pranjal.</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit labore quos doloremque, tenetur dolorem pariatur blanditiis modi laudantium soluta non, sapiente fuga aliquam.</p>
-</body>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat quam architecto voluptatem facilis, magni nam consequuntur atque, dignissimos aspernatur quos optio magnam esse molestiae maiores perferendis distinctio maxime. Est, placeat.</p>
+    </body>
 </html>
